--- a/deno.json
+++ b/deno.json
@@ -4,6 +4,7 @@
     "test": "deno test -A",
     "build": "deno check api/src/main.ts",
     "db:generate": "deno run -A --node-modules-dir npm:drizzle-kit generate",
+    "db:migrate": "deno run -A api/src/db/client.ts",
     "lint": "deno lint",
     "fmt": "deno fmt"
   },
@@ -16,7 +17,8 @@
     "@trpc/server": "npm:@trpc/server@^10.45.2",
     "@trpc/client": "npm:@trpc/client@^10.45.2",
     "zod": "npm:zod@^3.23.8",
-    "ts-results-es": "npm:ts-results-es@^4.2.0"
+    "ts-results-es": "npm:ts-results-es@^4.2.0",
+    "uuidv7": "npm:uuidv7@^1.1.0"
   },
   "compilerOptions": {
     "strict": true,
