--- a/deno.json
+++ b/deno.json
@@ -5,6 +5,7 @@
     "build": "deno check api/src/main.ts",
     "db:generate": "deno run -A --node-modules-dir npm:drizzle-kit generate",
     "db:migrate": "deno run -A api/src/db/client.ts",
+    "manage:keys": "deno run -A api/src/manage_keys.ts",
     "lint": "deno lint",
     "fmt": "deno fmt"
   },
