feat(mgmt): implement real-time responsive management dashboard
Migrated to Hono server, added SSE event bridge, and built Lit-based components for ESI budget, worker pulse, and queue health monitoring.

--- a/deno.json
+++ b/deno.json
@@ -9,6 +9,7 @@
   },
   "imports": {
     "std/": "https://deno.land/std@0.224.0/",
+    "hono": "jsr:@hono/hono@^4.4.7",
     "postgres": "npm:postgres@^3.4.5",
     "@trpc/server": "npm:@trpc/server@^10.45.2",
     "@trpc/client": "npm:@trpc/client@^10.45.2",
